# github-portfolio-system

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  gps.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  cron_sync.yml  deploy_docs.yml  metrics.yml  readme.yml  release.yml  setup.yml  snake.yml
api-reference/: index.html
architecture/: index.html
assets/: custom.css
automation/: __init__.py  update_readme.py
branding/: assets_guide.md  brand_guide.md
ci-cd/: index.html
contributing/: index.html
deployment/: index.html
design-decisions/: index.html
docs/: api-reference.md  architecture.md  ci-cd.md  contributing.md  deployment.md  design-decisions.md  faq.md  index.md  roadmap.md  security.md  setup.md  troubleshooting.md
docs/assets/: custom.css
docs/providers/: github.md  huggingface.md  kaggle.md
faq/: index.html
profile/: README.md  data.json
prompts/: banner_prompts.md
providers/github/: index.html
providers/huggingface/: index.html
providers/kaggle/: index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
setup/: index.html
src/gps/: __init__.py  cli.py  config.py  engine.py  py.typed  renderer.py
src/gps/ai/: __init__.py  agents.py
src/gps/auth/: device_flow.py  storage.py
src/gps/config/: __init__.py  manager.py
src/gps/dashboard/backend/: server.py
src/gps/dashboard/static/: index.html
src/gps/engine/: __init__.py  core.py
src/gps/plugins/: __init__.py  loader.py
src/gps/providers/: __init__.py  base.py  blog.py  leetcode.py
src/gps/providers/github/: __init__.py  client.py  models.py  provider.py
src/gps/providers/huggingface/: __init__.py  client.py  models.py  provider.py
src/gps/providers/kaggle/: __init__.py  client.py  models.py  provider.py
src/gps/providers/linkedin/: __init__.py  provider.py
src/gps/renderer/: __init__.py  core.py
src/gps/storage/: __init__.py  manager.py
src/gps/themes/: engine.py  registry.py
src/gps/themes/templates/ai_ml/: huggingface.md
src/gps/themes/templates/devops/: github.md
src/gps/themes/templates/swe_general/: blog.md  github.md  huggingface.md  kaggle.md  leetcode.md
src/gps/utils/: __init__.py  discovery.py  http.py  logging.py  validators.py
src/gps/verify/: __init__.py  core.py
src/gps/widgets/: __init__.py  registry.py
templates/: architecture_template.md  contributing_template.md  repo_readme_template.md
tests/: conftest.py  test_validation.py
tests/integration/: test_readme_update.py
tests/unit/: test_auth.py  test_cli.py  test_cli_additional.py  test_config.py  test_coverage_boost.py  test_engine_core.py  test_github_client.py  test_hf_provider.py  test_kaggle_provider.py  test_logging.py  test_renderer.py  test_v3_features.py  test_v3_new_features.py  test_validators.py
troubleshooting/: index.html
