[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "github-portfolio-system"
version = "3.0.0"
description = "A Developer Identity Platform that automates, standardizes, and scales your GitHub portfolio and developer presence across platforms."
authors = [{ name = "Adith Shajee", email = "adideva12345@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["github", "portfolio", "readme", "automation", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "jinja2>=3.1.4",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
    "black>=24.4.2",
    "ruff>=0.4.9",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.9",
    "mkdocs-material>=9.5.27",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mike>=2.1.1",
    "pre-commit>=3.7.1",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
]
huggingface = [
    "huggingface-hub>=0.23.0",
]
kaggle = [
    "kaggle>=1.6.14",
]

[project.urls]
Homepage = "https://github.com/Adithshajee/github-portfolio-system"
Documentation = "https://adithshajee.github.io/github-portfolio-system"
Repository = "https://github.com/Adithshajee/github-portfolio-system"
Issues = "https://github.com/Adithshajee/github-portfolio-system/issues"
Changelog = "https://github.com/Adithshajee/github-portfolio-system/blob/main/CHANGELOG.md"

[project.scripts]
gps = "gps.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gps" = ["py.typed"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN204", # Missing return type annotation for special method
    "S101",   # Use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"automation/**" = ["ANN", "UP"]  # Deprecated layer — relaxed rules

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ─── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["automation/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=src/gps",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests that may use temp files",
    "network: Tests requiring real network access (skipped in CI by default)",
]

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/gps"]
omit = ["*/tests/*", "*/migrations/*", "*/themes/templates/*", "*/dashboard/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ─── bandit ───────────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src/gps"]
skips = ["B101"]  # assert usage
